fix: Store 페이지 담기 버튼 nowrap 적용

--- a/week8/parkcoool/src/pages/Store/Store.module.css
+++ b/week8/parkcoool/src/pages/Store/Store.module.css
@@ -118,4 +118,5 @@
     padding: 8px 14px 8px 15px;
     font-size: 13px;
     font-weight: 500;
+    white-space: nowrap;
 }
